<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutUsFragment"
    android:background="@color/white"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/about_us_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/about_us"
            android:textAlignment="gravity"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/about_us_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:textAlignment="gravity"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/about_us_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/btnKnowMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/learn_more"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>