<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TeamFragment"
    android:background="@color/white"
    android:paddingBottom="60dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/dev1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="6dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@drawable/sushil_kumar"
                    android:contentDescription="@string/sushil_kumar" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/sushil_kumar"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/lead"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dev2"
            android:layout_width="match_parent"
            android:layout_below="@id/dev1"
            android:layout_height="140dp"
            android:layout_margin="6dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@drawable/yuvraj_singh"
                    android:contentDescription="@string/yuvraj_singh" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/yuvraj_singh"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/app_developer"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dev3"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@+id/dev2"
            android:layout_margin="6dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@drawable/himanshu_gupta"
                    android:contentDescription="@string/himanshu_gupta" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/himanshu_gupta"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/web_developer"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dev4"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@+id/dev3"
            android:layout_margin="6dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="6">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@drawable/shubham_varshney"
                    android:contentDescription="@string/shubham_varshney" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4.5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/shubham_varshney"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="28sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/ml_ai_developer"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="24sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</ScrollView>