<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DashboardFragment"
    android:background="@color/white"
    android:paddingBottom="80dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNews"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:hint="@string/enter_title"
            android:drawableLeft="@drawable/ic_news"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/etNews"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:hint="@string/enter_description"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_desc"/>

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/etDesc"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/check"
            android:textAllCaps="false"
            android:drawableRight="@drawable/ic_arrow"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/btnCheck"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:hint="@string/enter_link"
            android:drawableLeft="@drawable/ic_link"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/btnCheck2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/etLink"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/check"
            android:textAllCaps="false"
            android:drawableRight="@drawable/ic_arrow"
            android:drawablePadding="10dp"/>

        <RelativeLayout
            android:id="@+id/progressLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnCheck2"
            android:layout_marginTop="60dp"
            android:visibility="gone">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>